--- a/src/main/resources/arp/implementation/druid-arp.yaml
+++ b/src/main/resources/arp/implementation/druid-arp.yaml
@@ -26,7 +26,7 @@ syntax:
   identifier_length_limit: 256
   allows_boolean_literal: false
   map_boolean_literal_to_bit: false
-  supports_catalogs: true
+  supports_catalogs: false
   supports_schemas: true
 
 
